manifestos/monitoria/test-ingress/alert-manager-external-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-main-svc-bridge
  namespace: default
spec:
  type: ExternalName
  externalName: alertmanager-main.monitoring.svc.cluster.local
  ports:
  - port: 9093
    protocol: TCP
    targetPort: 9093
  sessionAffinity: None
