manifestos/monitoria/test-ingress/prometheus-external-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator-svc-bridge
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-operator.monitoring.svc.cluster.local
  ports:
  - port: 8443
    protocol: TCP
    targetPort: 8443
  sessionAffinity: None
